syntax = "proto3";

package bank;

import "finance.proto";
option go_package = "github.com/joseluis8906/project-layout/internal/bank/pb";

message Events_V1 {
    message AccountCreated {
        message Attributes {
            string type = 1;
            string number = 2;
        }
        string id = 1;
        int64 occurred_on = 2;
        Attributes attributes = 3;
    }

    message AccountDebited {
        message Attributes {
            string type = 1;
            string number = 2;
            company.Money amount = 3;
        }
        string id = 1;
        int64 occurred_on = 2;
        Attributes attributes = 3;
    }

    message AccountCredited {
        message Attributes {
            string type = 1;
            string number = 2;
            company.Money amount = 3;
        }
        string id = 1;
        int64 occurred_on = 2;
        Attributes attributes = 3;
    }
}
